<resources>
    <string name="app_name">MyNews</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aboutToolbar">About</string>
    <string name="SearchToolbar">Search</string>
    <string name="notificationToolbar">Notification</string>
    <string name="BackMain">Main</string>
    <string name="WarningMessage">you should set your personal choice in parameter</string>
    <string name="notificationTermSearch">Search query term</string>
    <string name="notificationArts">Arts</string>
    <string name="notificationPolitics">Politics</string>
    <string name="notificationBusiness">Business</string>
    <string name="notificationSport">Sports</string>
    <string name="notificationClimate">Climate</string>
    <string name="notificationTravel">Travel</string>
    <string name="notificationEnable">Enable notifications (once per day)</string>
    <string name="notificationInformation">Set these parameter for enable personal news</string>
    <string name="searchButtonText">Search</string>
    <string name="searchBeginDate">Begin Date</string>
    <string name="searchEndDate">End Date</string>
    <string name="aboutTitle">MyNews</string>
    <string name="aboutText">MyNews is a application which show the last news of the newspaper "New York Times"\n\n
    This application has three tab:\n
    - the first tab show the last news.\n
    - the second tab show the most shared news of the last seven days.\n
    - the third tab show the news according your preference.\n
    This preference must be set first in the notification screen\n\n

    MyNews can notify when he receive a news who agrees to your preference, you can activate this functionality in the notification screen</string>
    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>
    <string name="navigation_search_title">search</string>
    <string name="navigation_notification_title">notification</string>
    <string name="searchWarning">nothing found</string>
</resources>
