<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/search_layout"
    tools:context=".controller.activity.SearchActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/search_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">
    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/search_search_term"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/notificationTermSearch"
        android:inputType="text"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searchBeginDate"
            android:layout_marginStart="20dp"/>

        <Button
            android:id="@+id/btn_begin_date"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:text="Begin date"
            android:onClick="setDate"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searchEndDate"
            android:layout_marginStart="200dp"/>

        <Button
            android:id="@+id/btn_end_date"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="200dp"
            android:text="end Date"
            android:onClick="setDate"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <CheckBox
            android:id="@+id/search_politics"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/notificationPolitics" />

        <CheckBox
            android:id="@+id/search_arts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notificationArts"
            android:layout_marginStart="100dp"
            android:layout_toEndOf="@id/search_politics"/>
        <CheckBox
            android:id="@+id/search_sports"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/notificationSport"
            android:layout_below="@id/search_politics"
            android:layout_marginTop="10dp"/>
        <CheckBox
            android:id="@+id/search_business"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notificationBusiness"
            android:layout_toEndOf="@id/search_sports"
            android:layout_below="@id/search_arts"
            android:layout_marginTop="10dp"
            android:layout_marginStart="100dp"/>
        <CheckBox
            android:id="@+id/search_travel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/notificationTravel"
            android:layout_below="@id/search_sports"
            android:layout_marginTop="10dp"/>
        <CheckBox
            android:id="@+id/search_climate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notificationClimate"
            android:layout_below="@id/search_business"
            android:layout_toEndOf="@id/search_travel"
            android:layout_marginStart="100dp"
            android:layout_marginTop="10dp"/>
    </RelativeLayout>

    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="50dp"
        android:text="@string/searchButtonText"/>

</LinearLayout>